--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -46,7 +46,8 @@
       topic: sorting
     Nov 11:
       topic: lab
-      links: a2/
+      links: 
+      a2: a2/
 - week: "05"
   dates:
     Nov 14:
