--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -91,8 +91,9 @@
     Dec 12:
       topic: string matching
     Dec 14:
-    Dec 16:
       topic: string matching
+    Dec 16:
+      topic: lab
 - week: "10"
   dates:
     Dec 19:
