--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -94,6 +94,8 @@
         handout: slides/shortest-paths-handout.pdf
     Dec 02:
       topic: lab
+      links: 
+        a4: a5/
 - week: "08"
   dates:
     Dec 05:
