--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -188,6 +188,6 @@
     Feb 06:
       topic: summary/project discussion
     Feb 08:
-      topic: exam
+      topic: exam discussion, Q&A
     Feb 10:
       topic: exam
