--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -199,6 +199,7 @@
   dates:
     Jan 30:
       topic: Dependency parsing
+      links:
         slides: slides/dependency-parsing.pdf
         handout: slides/dependency-parsing-handout.pdf
     Feb 01:
